# TestProjects

./: README.md  create_django_project.bat  create_django_project.py  file_tracker.py  mobile_app.py
Brandquad/: README.md  exercise.md
Brandquad/django/: requirements.txt
Comsoftlab/: .gitignore  README.md  exercise.md
Comsoftlab/django/: requirements.txt
FastAPIMessanger/: .gitignore  README.md  docker-compose.yml  exercise.md
FastAPIMessanger/app/: Dockerfile  database.py  (+2 more)
Geointellect/: README.md  exercise.md
HardcodePythonBackend/: README.md
LibraryTestCase/: README.md  excercise.md  requirements.txt
Magic_box/: TBMB.py  requirements.txt
MenuTestCase/: .gitignore  README.md  manage.py  задание.txt
MeteoTestCase/: .gitignore  Dockerfile  README.md  requirements.txt
Mycego/: README.md  exercise.md
Organizer/: org.py  readme.md
Organizer_v2/: __future.txt  main.py  new_main.py  test.py
Organizer_v3/: README.md  __future__.txt  main.py  requirements.txt  runl.sh  runw.bat
Robita/: .gitignore  README.md  docker-compose.yaml  exercise.md
TelethonTestCase/: .gitignore  Dockerfile  README.md  requirements.txt  start.sh
ZARMATestCase/: solution1.py  solution2.py  solution3.py  solution4.py
ZIT/: README.md  exercise.md  Тестовое задание для Backend.docx
ZIT/backend/: alembic.ini  pyproject.toml
ZIT/backend/migration/: env.py
ZIT/backend/migration/versions/: 5218fa26dc82_add_product.py  ba7767775bb8_initial.py
ZIT/backend/src/: configs.py  datebase.py  main.py
ZIT/backend/src/products/: models.py  router.py  schemas.py  service.py
(+379 files in other folders)
